--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .section-1{
     background-color: rgb(0, 0, 0);
     text-align: center;
+    display: flex;
+    align-content: center;
 }
 
 .section-1__text{
@@ -12,10 +14,9 @@
 }
 
 .col-3{
-    width: 30%;
+    width: 32%;
     height: 90%;
     background-color: rgb(255, 255, 255);
-    display: inline-block;
     padding: 5px;
     margin: 5px;
     text-align: center;
